custom_css.css
/* Change all fonts to Helvetica */
html {
    font-size: 16px;
}

body {
    font-size: 16px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: Helvetica, Arial, sans-serif;
}

th {
    font-family: Helvetica, sans-serif;
    text-align: center;
}

.site-branding {
    font-family: Helvetica, sans-serif;
}

body {
    font-family: Helvetica, sans-serif;
}

.site-slogan {
    font-family: Helvetica, sans-serif;
}

.close-mobile-menu {
    font-family: Helvetica, sans-serif;
}

.primary-menu-wrapper {
    font-family: Helvetica, sans-serif;
    font-weight: bold;
}

ul.main-menu {
    font-family: Helvetica, sans-serif;
    font-weight: bold;
}

.breadcrumb {
    font-family: Helvetica, sans-serif;
}

.sidebar {
    font-family: Helvetica, sans-serif;
    text-align: center;
}

.icon-box,
.icon-box2 {
    font-family: Helvetica, sans-serif !important;
}

.accordion-title,
.toggle-title {
    font-family: Helvetica, sans-serif;
}


/* Table formatting things, including groupmeeting table */

th,
tr,
td {
    text-align: left;
}

th.grpmtg {
    text-align: right;
    color: var(--theme-color-two);
    font-weight: normal;
    width: 25%;
}

table.grpmtg,
tr.grpmtg,
th.grpmtg,
td.grpmtg {
    border: none;
    background: var(--body-bg);
}

/* Link style */

a:hover {
    color: var(--link-hover);
    text-decoration: underline;
}

a:active,
a:hover,
a:focus {
    text-decoration: none;
    border: 0;
    outline: 0;
    text-decoration: underline;
}

/* Remove margin between paragraphs  */

p {
    margin: 0 0 0em 0;
}

/* Make all header fonts just a bit bigger  */

h1 {
    font-size: 2.5em;
}

h2 {
    font-size: 2.25em;
}

h3 {
    font-size: 2.0em;
}

h4 {
    font-size: 1.75em;
}

h5 {
    font-size: 1.5em;
}

h6 {
    font-size: 1.25em;
}

/* Define img classes for the people section  */

/* For peoples faces */
img.ppl {
    width: 15em;
    height: 15em;
    object-fit: cover;
    border-radius: 5px;
}

/* For favorite figures */
img.fav {
    width: 15em;
    height: 15em;
    object-fit: cover;
    border-radius: 5px;
}

/* Remove the ugly border between menu items  */

ul.main-menu ul.submenu li {
    border-top: none !important
}

/* Give sidebar more attractive appearance */

.sidebar .block {
    margin-bottom: 20px;


    padding: 10px;
    border-radius: 5px;
    background: var(--sidebar-bg);
    border: 2px solid var(--border-color);
    -webkit-box-shadow: 3px 3px var(--theme-color);
    box-shadow: 3px 3px var(--theme-color);
}


/* Button  */

button,
[type="button"],
[type="reset"],
[type="submit"] {
    border-radius: 5px;
}

.button, a.button, button {
    border-radius: 5px;
}

a.button:active,
a.button:hover,
a.button:focus {
    text-decoration: none;
}

/* Accordion, Toggle */

.accordion-title,
.toggle-title {
    background: var(--sidebar-bg);
    border: 2px solid var(--border-color);
    border-radius: 5px;
    -webkit-box-shadow: 3px 3px var(--theme-color);
    box-shadow: 3px 3px var(--theme-color);
}

/* Text box  */

.text-box {
    text-align: center;
    background: var(--sidebar-bg);
    border: 2px solid var(--border-color);
    border-radius: 5px;
    -webkit-box-shadow: 3px 3px var(--theme-color);
    box-shadow: 3px 3px var(--theme-color);
}

/* Feature/service  */


.feature,
.service {
    padding: 16px;
    text-align: center;
    margin: 0 0 15px 0;
    background: var(--sidebar-bg);
    border: 2px solid var(--border-color);
    border-radius: 5px;
    -webkit-box-shadow: 3px 3px var(--theme-color);
    box-shadow: 3px 3px var(--theme-color);
    -webkit-transition: all linear 0.1s; 
    /* .3s */
    transition: all linear 0.1s;
}

.feature:hover,
.service:hover {
    background: var(--theme-color-two);
    color: var(--body-color);
    /* transform: translate(2px, -2px); */
    /* -webkit-box-shadow: none;
    box-shadow: none; */
}
.feature:hover h3,
.service:hover h3,
.feature:hover h4,
.service:hover h4,
.feature:hover h5,
.service:hover h5 {
    color: var(--body-color);
}
a.feat, 
a.feat:hover {
    color: var(--theme-color);
    text-decoration: none;
}
.feature:hover a,
.service:hover a {
  color: var(--theme-color);
}


/* Elements -> Slider */

.owl-carousel .owl-stage {
    display: flex;
    align-items: center;
}

#slider {
    position: relative;
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: auto;
    margin-top: auto;
    padding: 0;
    background: transparent;
    z-index: 2;
}
.slider-container {
    position: relative;
    margin: auto;
    padding: 0;
}
.home-slider {
    position: relative;
    width: 100%;
    margin: auto;
    z-index: 5;
}
.slider-item {
    position: relative;
    height: 100vh;
    width: 100vw;
    margin: auto;
    min-height: 1px;
    z-index: 6;
}
.slider-img {
    position: relative;
    object-fit: cover;
    width: 100vw;
    height: 100vh;
    margin: auto;
    width: 100%;
    z-index: 7;
}

/* nav button positioning */
.slider .owl-nav  {
    position: relative;
    top: -100px;
}
.slider .owl-nav .owl-prev span {
    position: relative;
    right: 20vw;
}
.slider .owl-nav .owl-next span {
    position: relative;
    left: 20vw;
}

.slider .owl-dots button.owl-dot {
    position: relative;
    top: calc(-100px - 35px);
} 


/* nav button styling  */
.owl-nav .owl-prev span,
.owl-nav .owl-next span {
    /* font-family: Helvetica, sans-serif; */
    font-size: 2em;
    color: var(--body-color);
    background: var(--body-bg);
    outline: 2px solid var(--body-color);
    width: 50px;
    height: 50px;
    line-height: 50px;
    text-align: center;
    border-radius: 50%;
    vertical-align: center;
}
.owl-dots button.owl-dot {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 2px solid var(--border-color);
    background: #000;
}



.owl-carousel .animated {
    animation-duration: 0.5s;
    animation-fill-mode: both;
}

.layer1,
.layer2,
.layer3,
.layer4,
.layer5,
.layer6 {
    color: #fff;
    font-weight: bold;
    text-shadow: 3px 3px var(--theme-color);
    -webkit-transition: all ease 0.5s;
    -moz-transition: all ease 0.5s;
    transition: all ease 0.5s;
}

.active .layer1 {
    -webkit-transition-delay: 0.5s;
    -moz-transition-delay: 0.5s;
    transition-delay: 0.5s;
} 


/* Make transitions snappier */

ul.main-menu ul.submenu li a {
    /* padding: 10px 0;
    color: #fff; */
    transition: all ease 0.1s;
    -webkit-transition: all ease 0.1s;
    -moz-transition: all ease 0.1s;
}

ul.page-tabs li a {
    /* padding: 4px 10px;
    background: #e2dfd8;
    color: #111; */
    -webkit-transition: all 0.1s ease;
    transition: all 0.1s ease;
}

.scrolltop {
    /* position: fixed;
    display: none;
    right: 10px;
    bottom: 10px;
    width: 44px;
    height: 44px;
    line-height: 44px;
    border-radius: 50%;
    background: #222;
    color: #fff;
    z-index: 8;
    cursor: pointer; */
    -webkit-transition: background 0.1s ease;
    transition: background 0.1s ease;
    text-align: center;
}

.icon-box i,
.icon-box2 .icon i {
    /* font-size: 2.6em; */
    -webkit-transition: all .1s ease-out;
    transition: all .1s ease-out;
}

li.expanded:hover ul.submenu,
li.collapsed:hover ul.submenu {
    /* display: block; */
    -webkit-animation: slideUp 0.1s forwards;
    animation: slideUp 0.1s forwards;
}
l.submenu li.expanded:hover ul.submenu,
ul.submenu li.collapsed:hover ul.submenu {
    display: block;
    -webkit-animation: slideUp 0.1s forwards;
    animation: slideUp 0.1s forwards;
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
    /* cursor: pointer;
    border: 0;
    border-radius: 2px;
    -webkit-appearance: button;
    padding: 9px 10px;
    background-color: var(--theme-color);
    color: #fff; */
    -webkit-transition: background-color 0.1s ease;
    transition: background-color 0.1s ease;
}

.button, a.button, button,
.button-dark, a.button-dark, button.button-dark,
.button-round, a.button-round, button.button-round,
.button-outline, a.button-outline, button.button-outline {
    /* position: relative;
    display: inline-block;
    padding: 7px 16px; */
    -webkit-transition: all 0.1s ease;
    transition: all 0.1s ease;
}

